# tpwriter

./: Home.py  Untitled.ipynb  dl.txt  environment.yml  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pages/: Eleuther.py  First to third person converter.py  GPT-3 Open AI Models.py  GPT-J local playground.py  Models running on Sagemaker.py  Sagemaker.py
