[tool.poetry]
name = "tpwriter"
version = "0.1.0"
description = ""
authors = ["tomas <tomasgonz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.1"
boto3 = "^1.26.18"
sagemaker = "^2.117.0"
openai = "^0.25.0"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
